Review resources naming
raylib resource data file for Windows platform (containing raylib icon and metadata for executable file) has been renamed to a more consistent name: raylib.rc.data

Also required to work with tcc compiler.

--- a/VSCode/Makefile
+++ b/VSCode/Makefile
@@ -179,7 +179,7 @@ ifeq ($(PLATFORM),PLATFORM_DESKTOP)
         # resources file contains windows exe icon
         # -Wl,--subsystem,windows hides the console window
         CFLAGS += -Wl,--subsystem,windows
-        LDFLAGS += $(RAYLIB_PATH)/raylib.rc.o
+        LDFLAGS += $(RAYLIB_PATH)/raylib.rc.data
     endif
     ifeq ($(PLATFORM_OS),LINUX)
         CFLAGS += -D_DEFAULT_SOURCE
