--- a/VSCode/.vscode/launch.json
+++ b/VSCode/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "Debug",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/game",
+            "program": "${workspaceFolder}/${fileBasenameNoExtension}",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
@@ -23,7 +23,7 @@
               }
             ],
             "windows": {
-              "miDebuggerPath": "C:/raylib/mingw/bin/gdb.exe",
+              "miDebuggerPath": "C:/raylib/mingw32/bin/gdb.exe",
             },
             "osx": {
               "MIMode": "lldb"
@@ -42,11 +42,11 @@
             "cwd": "${workspaceFolder}",
             "environment": [],
             "externalConsole": false,
-            "program": "${workspaceFolder}/game",
+            "program": "${workspaceFolder}/${fileBasenameNoExtension}",
             "MIMode": "gdb",
             "windows": {
-              "program": "${workspaceFolder}/game.exe",
-              "miDebuggerPath": "C:/raylib/mingw/bin/gdb.exe"
+              "program": "${workspaceFolder}/${fileBasenameNoExtension}.exe",
+              "miDebuggerPath": "C:/raylib/mingw32/bin/gdb.exe"
             },
             "osx": {
               "MIMode": "lldb"
