--- a/VS2017/raylib/raylib.vcxproj
+++ b/VS2017/raylib/raylib.vcxproj
@@ -159,9 +159,8 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\src\audio.c" />
+    <ClCompile Include="..\..\..\src\raudio.c" />
     <ClCompile Include="..\..\..\src\core.c" />
-    <ClCompile Include="..\..\..\src\external\mini_al.c" />
     <ClCompile Include="..\..\..\src\models.c" />
     <ClCompile Include="..\..\..\src\rglfw.c" />
     <ClCompile Include="..\..\..\src\shapes.c" />
